<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/lesson1Button"
        android:text="@string/start_lesson1_text"
        style="@style/MainActivityButton"/>
    <Button
        android:id="@+id/lesson2Button"
        android:text="@string/start_lesson2_text"
        style="@style/MainActivityButton"/>
    <Button
        android:id="@+id/lesson3Button"
        android:text="@string/start_lesson3_text"
        style="@style/MainActivityButton"/>
    <Button
        android:id="@+id/lesson4Button"
        android:text="@string/start_lesson4_text"
        style="@style/MainActivityButton"/>
    <Button
        android:id="@+id/lesson5Button"
        android:text="@string/start_lesson5_text"
        style="@style/MainActivityButton"/>
    <Button
        android:id="@+id/lesson6Button"
        android:text="@string/start_lesson6_text"
        style="@style/MainActivityButton"/>
</LinearLayout>