<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urlText"
        android:textColor="@color/colorDarkBlue"
        style="@style/TextView"/>

    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testUrl"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/urlImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/urlButton"
        style="@style/MainActivityButton"
        android:text="@string/getImageButtonText" />
</LinearLayout>